--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,15 +4,12 @@
   | default @import url()
   |============================
 */
-/* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
-
 /* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+@import url('./header-nav-section.css');
+@import url('./hero-section.css');
+@import url('./about-us-section.css');
+@import url('./our-courses-section.css');
+@import url('./our-mentors-section.css');
+@import url('./sign-up-section.css');
+@import url('./reviews-section.css');
+@import url('./footer-section.css');
