--- a/src/partials/hero-section.html
+++ b/src/partials/hero-section.html
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Document</title>
-    <link rel="stylesheet" href="path/to/modern-normalize.min.css" />
-    <link rel="stylesheet" href="hero-section.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <main>
+
       <section class="hero">
-        <div class="hero__content">
+        <div class="hero_content">
           <h1>Discover the <em>magic</em> of photography in our school</h1>
           <p class="hero-content-text">
             Our photography school offers an unforgettable journey, where you
@@ -62,6 +47,4 @@
         </div>
         </div>
       </section>
-    </main>
-  </body>
-</html>
+
